--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     
 </head>
 <body>
-    
+    <div id="app">
+        <main>
+            <div class="main-container">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus deleniti labore quos necessitatibus laborum esse consequuntur asperiores porro sapiente praesentium. Rem vero architecto ipsa nihil blanditiis alias sed animi. Magnam?
+            </div>
+        </main>
+
+        <aside>
+            <div class="aside-container">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim obcaecati esse aperiam nisi quibusdam nemo earum, fugiat harum officiis dolor, maxime temporibus? Beatae nesciunt sint nihil officiis, suscipit nisi consequatur?
+            </div>
+        </aside>
+    </div>
 </body>
 </html>
