conteudo aside e conteudo inicial do main

--- a/index.html
+++ b/index.html
@@ -17,13 +17,25 @@
     <div id="app">
         <main>
             <div class="main-container">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus deleniti labore quos necessitatibus laborum esse consequuntur asperiores porro sapiente praesentium. Rem vero architecto ipsa nihil blanditiis alias sed animi. Magnam?
+                <div class="back">
+                    <img src="assets/icons/arrow-left-02.svg" alt="ícone de Voltar">
+                    <span>Voltar</span>
+                </div>
+
+                <h1>Formulário de matrícula</h1>
+                <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
             </div>
         </main>
 
         <aside>
             <div class="aside-container">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim obcaecati esse aperiam nisi quibusdam nemo earum, fugiat harum officiis dolor, maxime temporibus? Beatae nesciunt sint nihil officiis, suscipit nisi consequatur?
+                <header>
+                    <img src="assets/logo.svg" alt="Logo estrelas do amanhã">
+                    <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+                    <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+                </header>
+
+                <img src="/assets/Illustration.svg" alt="Ilustração de uma professora com alunos">
             </div>
         </aside>
     </div>
